<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/color_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
        app:srcCompat="@drawable/ic_up_wave" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/new_account_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_lock_24"
        android:drawablePadding="5dp"
        android:drawableTint="@color/sign_up_text"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/choose_photo"
        android:textColor="@color/sign_up_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/ic_person_24" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/ic_camera_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@color/color_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="-14dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_down_wave" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="false"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_lock_24"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/data_for_authentication"
                android:textColor="@color/sign_up_text"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="45dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:textColorHint="@color/opaque_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/opaque_color"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
                app:layout_constraintStart_toStartOf="@+id/edit_text_email"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:drawableStart="@drawable/ic_person_24"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/personal_data"
                android:textColor="@color/sign_up_text"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/edit_text_password"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/input_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/opaque_color"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <EditText
                android:id="@+id/edit_text_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/input_city"
                android:inputType="textPersonName"
                android:textColorHint="@color/opaque_color"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />

            <EditText
                android:id="@+id/edit_text_birth_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/input_birth_date"
                android:inputType="date"
                android:textColorHint="@color/opaque_color"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_city"
                app:layout_constraintStart_toStartOf="@+id/edit_text_city"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_city" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/input_gamer_level"
                android:textColor="@color/opaque_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/edit_text_birth_date"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_birth_date" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_game_level"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="4"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/text_view_level"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/level_begginer"
                android:textAlignment="center"
                android:textColor="@color/default_color"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_birth_date"
                app:layout_constraintHorizontal_bias="0.835"
                app:layout_constraintStart_toEndOf="@+id/slider_game_level"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/input_favorite_console"
                android:textAlignment="textEnd"
                android:textColor="@color/opaque_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/slider_game_level"
                app:layout_constraintTop_toBottomOf="@+id/slider_game_level" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_console_name"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:entries="@array/consoles"
                app:layout_constraintEnd_toEndOf="@+id/text_view_level"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@id/textView8" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/input_sex"
                android:textColor="@color/opaque_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/spinner_console_name"
                app:layout_constraintTop_toBottomOf="@+id/spinner_console_name" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/spinner_console_name"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11">

                <RadioButton
                    android:id="@+id/button_male"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/button_feminine"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/feminine" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>